test/constrained-generics/hashable/user-hash-no-implements.good
user-hash-no-implements.chpl:14: error: R has a hash function, but does not implement Hashable
